--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<p>
 				<img border="0" src="./images/Me3.jpg" width="110.1" height="154.4" class="float-left" />
 				I was born in Handan city, Hebei province, China in 1998. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
-				Now, I am pursuing my ph. D. degree in  mechanical engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
+				Now, I am pursuing my ph. D. degree in  School of Mechanical Engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
 				My domestic supervisor is Prof. <A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html" target="_blank"><strong>Shichang Du</strong></A>. 
 				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Andrea Matta</strong></A>.
 				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
@@ -74,25 +74,36 @@
 				<a name="news"></a>
 				<h2>News</h2>
 
-				<ul>	
-                         
+				<ul>
 					<li>
-					<font color=#007799>11/2023:</font> My paper entitled: "Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times" has been accepted as a special paper at <em>Advanced Engineering Informatics</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					<font color=#007799>03/2024:</font> Our paper entitled: "Advance scheduling for chronic care under online or offline revisit uncertainty" has been indexed as a ESI Highly Cited Paper and ESI Hot paper.
+					</li>					
+					<li>
+					<font color=#007799>01/2024:</font> Our paper entitled: "Machine-fixture-pallet resources constrained flexible job shop scheduling considering loading and unloading times under pallet automation system" has been accepted at <em>Journal of Manufacturing Systems</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					</li>
+					<li>
+					<font color=#007799>01/2024:</font> Our paper entitled: "Multi-resource constrained flexible job shop scheduling problem with fixture-pallet combinatorial optimisation" has been accepted at <em>Computers & Industrial Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					</li>
+					<li>
+					<font color=#007799>11/2023:</font> Our paper entitled: "Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times" has been accepted at <em>Advanced Engineering Informatics</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
 					<li>
 					<font color=#007799>10/2023:</font> I awarded Zhao Zhumulan doctoral students first-class Scholarship of Shanghai Jiao Tong University.
 					</li>
 					<li>
-					<font color=#007799>08/2023:</font> My paper entitled: "Advance Scheduling for Chronic Care Under Online or Offline Revisit Uncertainty" has been accepted as a regular paper at <em>IEEE Transactions on Automation Science and Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					<font color=#007799>08/2023:</font> Our paper entitled: "Advance scheduling for chronic care under online or offline revisit uncertainty" has been accepted at <em>IEEE Transactions on Automation Science and Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
 					<li>
-					<font color=#007799>08/2023:</font> My paper entitled: "Integrated optimization of electric vehicles charging location and allocation for valet charging service" has been accepted as a regular paper at <em>Flexible Services and Manufacturing Journal</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					<font color=#007799>08/2023:</font> Our paper entitled: "Integrated optimization of electric vehicles charging location and allocation for valet charging service" has been accepted at <em>Flexible Services and Manufacturing Journal</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
 					<li>
-					<font color=#007799>06/2021:</font> My paper entitled: "Scheduling policies analysis for matching operations in Bernoulli selective assembly lines" has been accepted as a special paper at <em>International Journal of Production Research</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
+					<font color=#007799>05/2023:</font> I awarded China Scholarship Council’s International Cooperation Training Project for Innovative Talents.
+					</li>					
+					<li>
+					<font color=#007799>5/2022:</font> I awarded Outstanding League Cadres of Shanghai Jiao Tong University.
 					</li>
 					<li>
-					<font color=#007799>5/2022:</font> I awarded Outstanding League Cadres of Shanghai Jiao Tong University in 2022.
+					<font color=#007799>06/2021:</font> Our paper entitled: "Scheduling policies analysis for matching operations in Bernoulli selective assembly lines" has been accepted at <em>International Journal of Production Research</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
 					</li>
 					
 				</ul>
@@ -126,12 +137,17 @@
 				<h2>Awarded Honors</h2>
 
 				<ul>
-					<li>National Scholarship, National Inspirational Scholarship, Shanghai Jiao Tong University Huihe Medical Scholarship, 2017, 2018, 2021.</font> </li>
+					<li>2023: Shanghai Jiao Tong University Zhao Zhumulan Doctoral First-Class Scholarship</li>
+					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
+					<li>2023: Special prize of the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
+                                        <li>2023: Bronze Award in the Shanghai Division of the 9th China International “Internet+” College Students Innovation and Entrepreneurship Competition</li>
 					<li>There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
-					<li>The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition in 2021 China University Students Mechanical Engineering Innovation Competition</font> </li>
-					<li>The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</font> </li>					
-					<li>The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition in 2016</font> </li>
-					<li>Outstanding League Cadres of Shanghai Jiao Tong University and Three Good Students of Shanghai Jiao Tong University</font> </li>	
+					<li>2021: The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition</li>
+					<li>2021: Shanghai Jiao Tong University Huihe Medical Scholarship</li>
+					<li>2021: The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</li>					
+					<li>2021, 2022: Three Good Students and Outstanding League Cadres of Shanghai Jiao Tong University</li>
+					<li>2017, 2018: National Scholarship, National Inspirational Scholarship
+					<li>2016: The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition</li>
 				</ul>	
 
 				<a name="activities"></a>				
@@ -160,6 +176,12 @@
 					<li>
 						<font color=#007799>Weichai Power:</font> "New Product Center Intelligent Scheduling Project", member, 2020-2023.</font> 
 					</li>
+					<li>
+						<font color=#007799>General Program of National Natural Science Foundation of China:</font> "Research on resource utility optimization for the complex coupling of Internet and traditional medical care", member, 2022-2025.</font> 
+					</li>
+					<li>
+						<font color=#007799>	High-tech ship scientific research project of the Ministry of Industry and Information Technology:</font> "Research on intelligent logistics technology for ship steel plates and outfitting parts", member, 2021-2022.</font> 
+					</li>					
 
 				</ul>
 
