--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				<ul>
 					<li>
-					<font color=#007799>03/2024:</font> Our paper entitled: "Advance scheduling for chronic care under online or offline revisit uncertainty" has been indexed as a ESI Highly Cited Paper and ESI Hot paper.
+					<font color=#007799>03/2024:</font> Our paper entitled: "Advance scheduling for chronic care under online or offline revisit uncertainty" has been indexed as a ESI Highly Cited Paper and ESI Hot Paper.
 					</li>					
 					<li>
 					<font color=#007799>01/2024:</font> Our paper entitled: "Machine-fixture-pallet resources constrained flexible job shop scheduling considering loading and unloading times under pallet automation system" has been accepted at <em>Journal of Manufacturing Systems</em>. More details can be found at <a><a href="pubs.htm">Publications</a>.
