--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						<font color=#007799>General Program of National Natural Science Foundation of China:</font> "Research on resource utility optimization for the complex coupling of Internet and traditional medical care", member, 2022-2025.</font> 
 					</li>
 					<li>
-						<font color=#007799>	High-tech ship scientific research project of the Ministry of Industry and Information Technology:</font> "Research on intelligent logistics technology for ship steel plates and outfitting parts", member, 2021-2022.</font> 
+						<font color=#007799>High-tech ship scientific research project of the Ministry of Industry and Information Technology:</font> "Research on intelligent logistics technology for ship steel plates and outfitting parts", member, 2021-2022.</font> 
 					</li>					
 
 				</ul>
