--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
 				<ul>
 					<li>Analysis, modelling, and decision-making optimization</li>
 					<li>Operations management</li>
-					<li>Manufacturing systems</li>
-					<li>Service systems</li>
-					<li>Reinforcement Learning</li>
+					<li>Manufacturing and service systems</li>
 					<li>Stochastic optimization</li>
 					<li>Exact optimization algorithm</li>
 					<li>Evolutionary Optimization</li>
+                                        <li>Reinforcement Learning</li>
 					<li>Simulation optimization</li>
 				</ul>
 
@@ -141,11 +140,11 @@
 					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
 					<li>2023: Special prize of the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
                                         <li>2023: Bronze Award in the Shanghai Division of the 9th China International “Internet+” College Students Innovation and Entrepreneurship Competition</li>
-					<li>2017-2020: There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
-					<li>2021: The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition</li>
 					<li>2021: Shanghai Jiao Tong University Huihe Medical Scholarship</li>
 					<li>2021: The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</li>					
 					<li>2021, 2022: Three Good Students and Outstanding League Cadres of Shanghai Jiao Tong University</li>
+					<li>2017-2020: There are more than 10 awards of national and above mathematical modeling competitions, including the Meritorious Winner Prize (first prize) of the Interdisciplinary Contest In Modeling, the second prize of the "Huawei Cup" National Graduate Mathematical Modeling Contest (twice in 2019 and 2020), the second prize of the postgraduate group of the Asia-Pacific College Mathematical Contest in Modeling (APMCM), the third prize of the National Undergraduate Mathematical Modeling Contest in Jiangsu Province, etc</font> </li>
+					<li>2021: The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition</li>
 					<li>2017, 2018: National Scholarship, National Inspirational Scholarship
 					<li>2016: The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition</li>
 				</ul>	
