--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.htm">Xiaoxiao Shen</a> |
-			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> 		
+			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=rDCTl_PjYFZjb0Ik7z8xYkIx1Ty7mDuO_w4SEyhWWGo&cl=ffffff"> Map</a> 		
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
