--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.htm">Xiaoxiao Shen</a> |
-			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> 		
+			Visits: <a href="https://www.easycounter.com/"><img src="https://www.easycounter.com/counter.php?xiaoxiaoshen"border="0" alt="Web Site Hit Counter"></a><br><a href="https://www.easycounter.com/">Website Hit Counter</a> 		
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
