--- a/links.htm
+++ b/links.htm
@@ -250,7 +250,7 @@
 			<p>   			
 			Design by: <a href="http://www.styleshout.com/" target="_blank">styleshout</a> | 
 			Modified by: <a href="index.htm">Xiaoxiao Shen</a> |
-			Visits: <a href="https://clustrmaps.com/site/1buq4"  title="Visit tracker"> Map</a> 	
+			Visits: <a href="https://www.easycounter.com/"><img src="https://www.easycounter.com/counter.php?xiaoxiaoshen"border="0" </a> 	
 			
 			<br>
 			<SCRIPT  LANGUAGE="JavaScript">
