--- a/pubs.htm
+++ b/pubs.htm
@@ -75,20 +75,37 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta. Dynamic advance scheduling for joint online and offline outpatient clinics with uncertain series revisits demand. Socio-Economic Planning Sciences. R0-Under Review. 
+						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. Production planning and allocation of re-entrance flows with stochastic quality. Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering. Accept, 2024. 
 						</li>
 						<li>
-						Xiaoxiao Shen, et al. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. Accept, Nov, 2023. https://authors.elsevier.com/c/1i8o25FA1k5poS
+						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. Dynamic advance scheduling for joint online and offline outpatients with stochastic chronic series revisits demands. IEEE Transactions on Automation Science and Engineering. (R0: Under submission)
 						</li>
 						<li>
-						Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, and Yulu Zhou. Integrated Optimization of Electric Vehicles Charging Location and Allocation for Valet Charging Service. Flexible Services and Manufacturing Journal. 2023. https://doi.org/10.1007/s10696-023-09508-8.
+						Yulu Zhou, Shichang Du*, Molin Liu, Xiaoxiao Shen. Machine-fixture-pallet resources constrained flexible job shop scheduling considering loading and unloading time under pallet automation system, Journal of Manufacturing Systems. 73, 143-158, 2024.
 						</li>			
 						<li>
-						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty, IEEE Transactions on Automation Science and Engineering. 2023. https://doi.org/10.1109/TASE.2023.3310116.
+						Molin Liu, Jun Lv, Shichang Du*, Yafei Deng, Xiaoxiao Shen, and Yulu Zhou. Multi-resource constrained flexible job shop scheduling problem with fixture-pallet combinatorial optimisation, Computers & Industrial Engineering. 188, 109903, 2024. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)
 						</li>
 						<li>
-						Xiaoxiao Shen, et al. Scheduling policies analysis for matching operations in Bernoulli selective assembly lines, International Journal of Production Research. 2022. 60:13, 3965-3988.						
+						Xiaoxiao Shen, Na Li*, Xiaoqing Xie. Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times. Advanced Engineering Informatics. 59, 102252, 2024. 					
 						</li>
+						<li>
+						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. Advance scheduling for chronic care under online or offline revisit uncertainty. IEEE Transactions on Automation Science and Engineering. 2023. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)					
+						</li>
+						<li>
+						 Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, Yulu Zhou. Integrated optimization of electric vehicles charging location and allocation for valet charging service. Flexible Services and Manufacturing Journal. 1-27, 2023.					
+						</li>
+						<li>
+						 Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process. International Journal of Computer Integrated Manufacturing. 1-16, 2023.					
+						</li>
+						<li>
+						 Xiaoxiao Shen, Na Li*. Scheduling policies analysis for matching operations in Bernoulli selective assembly lines. International Journal of Production Research. 60(13), 3965-3988, 2022. 					
+						</li>
+						<li>
+						 Xiaoyan Huang, Shuai Zhou, Xudong Ma, Zhitao Yang, Yuanyuan Xu, Xiaoxiao Shen, ..., Yong Lu. Emergency department treatment process  planning: a field research, case analysis, and simulation approach. Annals of Translational Medicine. 10(10), 2022.					
+						</li>
+						
+						
 					</ol>
 				<!--h3>---2022---</h3--> 
 					<!--ol reversed>  <!-- 2022 -->
