--- a/pubs.htm
+++ b/pubs.htm
@@ -75,7 +75,7 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. Production planning and allocation of re-entrance flows with stochastic quality. Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering. Accept, 2024. 
+						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. Production planning and allocation of re-entrance flows with stochastic quality. <p><i>Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering.</i></p> Accept, 2024. 
 						</li>
 						<li>
 						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. Dynamic advance scheduling for joint online and offline outpatients with stochastic chronic series revisits demands. IEEE Transactions on Automation Science and Engineering. (R0: Under submission)
