--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!--header -->
 		<div id="header">			
 				
-			<p id="logo-text"><a href="index.htm"><font size="6"><style="color: #003399;">Dr. Xiaoxiao Shen</font></a></p>		
+			<p id="logo-text"><a href="index.htm"><font size="6"><color= "#003399">Dr. Xiaoxiao Shen</font></a></p>		
 			<p id="slogan"><font size="6">Welcome to My Personal Academic Homepage...</font></p>		
 			
 			<div id="header-links">
