--- a/pubs.htm
+++ b/pubs.htm
@@ -83,10 +83,12 @@
 						 Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. <b>An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process.</b> <i>International Journal of Computer Integrated Manufacturing.</i> 1-16, 2023.					
 						</li>
 						<li>
-						 Xiaoxiao Shen, Na Li*. <b>Scheduling policies analysis for matching operations in Bernoulli selective assembly lines.</b> <i>International Journal of Production Research.</i> 60(13), 3965-3988, 2022. 					
+						 Xiaoxiao Shen, Na Li*. <b>Scheduling policies analysis for matching operations in Bernoulli selective assembly lines.</b> <i>International Journal of Production Research.</i> 60(13), 3965-3988, 2022. [<A href="Publication/02.pdf">pdf</A>]	[<A href="https://www.tandfonline.com/doi/abs/10.1080/00207543.2021.1939903">Link</A>]
+							
 						</li>
 						<li>
-						 Xiaoyan Huang, Shuai Zhou, Xudong Ma, Zhitao Yang, Yuanyuan Xu, Xiaoxiao Shen, ..., Yong Lu. <b>Emergency department treatment process  planning: a field research, case analysis, and simulation approach.</b> <i>Annals of Translational Medicine.</i> 10(10), 2022.					
+						 Xiaoyan Huang, Shuai Zhou, Xudong Ma, Zhitao Yang, Yuanyuan Xu, Xiaoxiao Shen, ..., Yong Lu. <b>Emergency department treatment process  planning: a field research, case analysis, and simulation approach.</b> <i>Annals of Translational Medicine.</i> 10(10), 2022.	[<A href="Publication/01.pdf">pdf</A>][<A href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9201160/">Link</A>]
+		
 						</li>
 				
 					</ol>	
