--- a/pubs.htm
+++ b/pubs.htm
@@ -59,28 +59,28 @@
 				<!--h3>---2023---</h3--> 
 					<ol reversed>   <!-- 2023-->
 						<li>
-						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. <b>Production planning and allocation of re-entrance flows with stochastic quality.</b> <i>Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering.</i> Accept, 2024. 
+						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. <b>Production planning and allocation of re-entrance flows with stochastic quality.</b> <i>Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering.</i> Accept, 2024. [<A href="Publication/09.pdf">pdf</A>]
 						</li>
 						<li>
 						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. <b>Dynamic advance scheduling for joint online and offline outpatients with stochastic chronic series revisits demands.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> (R0: Under submission)
 						</li>
 						<li>
-						Yulu Zhou, Shichang Du*, Molin Liu, Xiaoxiao Shen. <b>Machine-fixture-pallet resources constrained flexible job shop scheduling considering loading and unloading time under pallet automation system.</b> <i>Journal of Manufacturing Systems.</i> 73, 143-158, 2024.
+						Yulu Zhou, Shichang Du*, Molin Liu, Xiaoxiao Shen. <b>Machine-fixture-pallet resources constrained flexible job shop scheduling considering loading and unloading time under pallet automation system.</b> <i>Journal of Manufacturing Systems.</i> 73, 143-158, 2024.[<A href="Publication/08.pdf">pdf</A>][<A href="https://www.sciencedirect.com/science/article/pii/S0278612524000207">Link</A>] 		
 						</li>			
 						<li>
-						Molin Liu, Jun Lv, Shichang Du*, Yafei Deng, Xiaoxiao Shen, and Yulu Zhou. <b>Multi-resource constrained flexible job shop scheduling problem with fixture-pallet combinatorial optimisation.</b> <i>Computers & Industrial Engineering.</i> 188, 109903, 2024. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)
+						Molin Liu, Jun Lv, Shichang Du*, Yafei Deng, Xiaoxiao Shen, and Yulu Zhou. <b>Multi-resource constrained flexible job shop scheduling problem with fixture-pallet combinatorial optimisation.</b> <i>Computers & Industrial Engineering.</i> 188, 109903, 2024. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)[<A href="Publication/07.pdf">pdf</A>][<A href="https://www.sciencedirect.com/science/article/pii/S036083522400024X">Link</A>]
 						</li>
 						<li>
-						Xiaoxiao Shen, Na Li*, Xiaoqing Xie. <b>Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times.</b> <i>Advanced Engineering Informatics.</i> 59, 102252, 2024. 					
+						Xiaoxiao Shen, Na Li*, Xiaoqing Xie. <b>Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times.</b> <i>Advanced Engineering Informatics.</i> 59, 102252, 2024.[<A href="Publication/06.pdf">pdf</A>][<A href="https://www.sciencedirect.com/science/article/pii/S1474034623003804">Link</A>] 					
 						</li>
 						<li>
-						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. <b>Advance scheduling for chronic care under online or offline revisit uncertainty.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> 2023. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)					
+						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. <b>Advance scheduling for chronic care under online or offline revisit uncertainty.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> 2023. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)[<A href="Publication/05.pdf">pdf</A>]	[<A href="https://ieeexplore.ieee.org/abstract/document/10239270">Link</A>]					
 						</li>
 						<li>
-						 Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, Yulu Zhou. <b>Integrated optimization of electric vehicles charging location and allocation for valet charging service.</b> <i>Flexible Services and Manufacturing Journal.</i> 1-27, 2023.					
+						 Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, Yulu Zhou. <b>Integrated optimization of electric vehicles charging location and allocation for valet charging service.</b> <i>Flexible Services and Manufacturing Journal.</i> 1-27, 2023.[<A href="Publication/04.pdf">pdf</A>]	[<A href="https://link.springer.com/article/10.1007/s10696-023-09508-8">Link</A>]					
 						</li>
 						<li>
-						 Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. <b>An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process.</b> <i>International Journal of Computer Integrated Manufacturing.</i> 1-16, 2023.					
+						 Yan-Ning Sun, Qun-Long Chen, Jin-Hua Hu, Hong-Wei Xu, Wei Qin*, Zi-Long Zhuang, Xiaoxiao Shen. <b>An integrated CRN-SVR approach for the quality consistency improvement in a diesel engine assembly process.</b> <i>International Journal of Computer Integrated Manufacturing.</i> 1-16, 2023.[<A href="Publication/03.pdf">pdf</A>]	[<A href="https://www.tandfonline.com/doi/abs/10.1080/0951192X.2023.2204469">Link</A>]					
 						</li>
 						<li>
 						 Xiaoxiao Shen, Na Li*. <b>Scheduling policies analysis for matching operations in Bernoulli selective assembly lines.</b> <i>International Journal of Production Research.</i> 60(13), 3965-3988, 2022. [<A href="Publication/02.pdf">pdf</A>]	[<A href="https://www.tandfonline.com/doi/abs/10.1080/00207543.2021.1939903">Link</A>]
