--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 				<h2>News</h2>
 
 				<ul>
+				        <li>
+					<font color=#007799>09/2024:</font> I successfully attended the 2024 IEEE 20th International Conference on Automation Science and Engineering from August 28 to September 1, 2024 in Bari, Italy!
+					</li>
 					<li>
 					<font color=#007799>03/2024:</font> Our paper entitled: "Advance scheduling for chronic care under online or offline revisit uncertainty" has been indexed as a ESI Highly Cited Paper and ESI Hot Paper.
 					</li>					
