--- a/index.html
+++ b/index.html
@@ -141,25 +141,38 @@
 				<ul>
 					<li>2023: Shanghai Jiao Tong University Zhao Zhumulan Doctoral First-Class Scholarship</li>
 					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
-					<li>2023: Special prize of the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
+					<li>2023: Special prize in the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
                                         <li>2023: Bronze Award in the Shanghai Division of the 9th China International “Internet+” College Students Innovation and Entrepreneurship Competition</li>
 					<li>2021: Shanghai Jiao Tong University Huihe Medical Scholarship</li>
-					<li>2021: The third prize of the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</li>					
+					<li>2021: The third prize in the 16th "Dongfeng Nissan Cup" Tsinghua IE Liangjian National Industrial Engineering Application Case Competition in 2021</li>					
 					<li>2021, 2022: Three Good Students and Outstanding League Cadres of Shanghai Jiao Tong University</li>			
-					<li>2021: The first prize of the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition</li>
+					<li>2021: First prize in the fourth "FAW Toyota Cup" Industrial Engineering and Lean Management Innovation Competition</li>
 					<li>2017-2020: I have won over 10 international and national awards in mathematical modeling competitions. These include being named a Meritorious Winner of the Interdisciplinary Contest in Modeling, securing the second prize in the “Huawei Cup” National Graduate Mathematical Modeling Contest (twice: 2019 and 2020), and achieving second prize in the Asia-Pacific College Mathematical Contest in Modeling (twice: graduate group and undergraduate group).</font> </li>
 					<li>2017, 2018: National Scholarship, National Inspirational Scholarship
-					<li>2016: The second prize for groups and the third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition</li>
+					<li>2016: Second prize for groups and third prize for individuals in the POCIB National College Students' Foreign Trade Ability Competition</li>
 				</ul>	
 
 				<a name="activities"></a>				
 				<h2>Social Activities</h2>
 
 				<ul>
-					<li><font color=#007799>Student Member</font> of Operations Research Society of China. </font> </li>
+					<li><font color=#007799>Student Member</font> of IEEE and Operations Research Society of China. </font> </li>
+					<li><font color=#007799>Serve as</font> co-chair for 8th Stochastic Modelling Meeting. </font> </li>
                                         <li><font color=#007799>Reviewer</font> of Computers & Industrial Engineering journal. </font> </li> 
-					<li><font color=#007799>Secretary</font> of Doctoral League Branch of the Department of Industrial Engineering and Management, and member of the ministerial group of the Graduate Student Association of the Institute. </font> </li>
+					<li><font color=#007799>03/2021 – 03/2022: </font> Secretary of Doctoral League Branch of the Department of Industrial Engineering and Management, Shanghai Jiao Tong University. </font> </li>
+					<li><font color=#007799>09/2020 – 06/2022: </font> Member of the Ministerial Group of the Graduate Student Council of the School of Mechanical Engineering, Shanghai Jiao Tong University. </font> </li>
 				</ul>
+
+				<a name="activities"></a>				
+				<h2>Conferences</h2>
+
+				<ul>
+					<li></font> National Industrial Engineering Doctoral Forum, 2020, online, China, “Best Style Award” </font> </li>
+					<li></font> China Industrial Engineering Annual Conference, 2023, Nanchang, China</font> </li>
+                                        <li></font> 8th Stochastic Modelling Meeting, 2024, Milan, Italy </font> </li> 
+					<li></font> IEEE 20th International Conference on Automation Science and Engineering, 2024, Bari, Italy </font> </li>
+					<li></font> The 4th digital twin international conference, 2024, Milan, Italy </font> </li>
+				</ul>		
 
 				<a name="work"></a>				
 				<h2>Work Experiences</h2>
@@ -186,6 +199,7 @@
 					</li>					
 
 				</ul>
+				
 
 			</div>
 		<!-- content-wrap ends here -->	
