--- a/contact.htm
+++ b/contact.htm
@@ -58,7 +58,7 @@
 					<li><h3>Address:</h3> 5F, Mechanical Office Building B, 800 Dongchuan Road, Min Hang, Shanghai, 200240, P.R.China</li>
 					<li><h3>E-mail:</h3><a href="mailto:sjtusxx98@sjtu.edu.cn">sjtusxx98@sjtu.edu.cn</a> (<strong>The best contact method</strong>) <img src="images/chickens_new_3.gif"/></li>
 					<br>OR 
-					<br><a href="mailto:xinjian02698@163.com">xinjian02698@163.com</a>
+					<br><a href="mailto:xiaoxiao.shen@polimi.it">xiaoxiao.shen@polimi.it</a>
 					<li><h3>Fax:</h3>Non</li>
 				</ul>
 
