--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 				<h2>News</h2>
 
 				<ul>
+					<li>
+					<font color=#007799>10/2024:</font> I completed the first peer review for Computers & Operations Research!
+					</li>
 				        <li>
 					<font color=#007799>09/2024:</font> I successfully attended the 2024 IEEE 20th International Conference on Automation Science and Engineering from August 28 to September 1, 2024 in Bari, Italy!
 					</li>
@@ -158,7 +161,7 @@
 				<ul>
 					<li><font color=#007799>Student Member</font> of IEEE and Operations Research Society of China. </font> </li>
 					<li><font color=#007799>Serve as</font> co-chair for 8th Stochastic Modelling Meeting. </font> </li>
-                                        <li><font color=#007799>Reviewer</font> of Computers & Industrial Engineering journal. </font> </li> 
+                                        <li><font color=#007799>Reviewer</font> of Computers & Operations Research, Computers & Industrial Engineering, International Journal of Computer Integrated Manufacturing. </font> </li> 
 					<li><font color=#007799>03/2021 – 03/2022: </font> Secretary of Doctoral League Branch of the Department of Industrial Engineering and Management, Shanghai Jiao Tong University. </font> </li>
 					<li><font color=#007799>09/2020 – 06/2022: </font> Member of the Ministerial Group of the Graduate Student Council of the School of Mechanical Engineering, Shanghai Jiao Tong University. </font> </li>
 				</ul>
