--- a/contact.htm
+++ b/contact.htm
@@ -64,7 +64,7 @@
 
 			</div>
 			<div id="main">
-					<a href="https://clustrmaps.com/site/1buwx" title="Visit tracker"><img src="//clustrmaps.com/map_v2.js?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff&w=a"></a>
+					<a href="https://clustrmaps.com/site/1buq4" title="Visit tracker"><img src="//clustrmaps.com/map_v2.js?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff&w=a"></a>
 			</div>
 		
 		<!-- content-wrap ends here -->	
