--- a/contact.htm
+++ b/contact.htm
@@ -63,7 +63,7 @@
 				</ul>
 
 			</div>
-			<div id="main">
+			<div id="footer">
 					<a href="https://clustrmaps.com/site/1buq4" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=nCmZ_He8gI9t3Hk-yQ14PYv-DTwoIGk8Hlc6r_Ag0fw&cl=ffffff"/></a>
 			</div>
 		
