--- a/links.htm
+++ b/links.htm
@@ -55,6 +55,9 @@
 				<h2>Homepages of distinguished scholars<img src="images/chickens_new_3.gif"/> </h2>
 				
 				<ul>
+                                        <LI>**Stochastic Optimization**</LI>
+                                        <LI><A href="https://tintin.hec.ca/pages/erick.delage/" target="_blank">Erick Delage (HEC Montréal)</A> </LI>
+					
 					<LI>**Shop Scheduling**</LI>
 					<LI><A href="https://www.au.tsinghua.edu.cn/info/1107/1558.htm" target="_blank">Wang Ling (Tsinghua University)</A> </LI>
 					<LI><A href="http://mse.hust.edu.cn/info/1143/1387.htm" target="_blank">Gao Liang (HuaZhong Technology University)</A> </LI>
