--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
 				<ul>
 					<li>
+					<font color=#007799>12/2024:</font> I was awarded as an Outstanding Graduate of Shanghai Jiao Tong University! Next, I’ll make full use of my time to write my thesis!!
+					</li>					
+					<li>
 					<font color=#007799>10/2024:</font> I completed the first peer review for Computers & Operations Research!
 					</li>
 				        <li>
