--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				<ul>
 					<li>
-					<font color=#007799>23/2/2025:</font> I successfully completed my study abroad career from 20/10/2023 to 22/2/2025!!
+					<font color=#007799>23/2/2025:</font> I successfully completed my study abroad career Politecnico di Milano, Milan, Italy from 20/10/2023 to 22/2/2025!!
 					</li>
 					<li>
 					<font color=#007799>12/2024:</font> I was awarded as an Outstanding Graduate of Shanghai Jiao Tong University! Next, I’ll make full use of my time to write my thesis!!
