--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
 				<ul>
 					<li>
+					<font color=#007799>21/3/2025:</font> Our paper entitled "Advance Scheduling for Chronic Care under Online or Offline Revisit Uncertainty" has received the T-ASE 2024 Best Application Paper Award!!
+					</li>					
+					<li>
 					<font color=#007799>23/2/2025:</font> I successfully completed my study abroad career at Politecnico di Milano, Milan, Italy from 20/10/2023 to 22/2/2025!!
 					</li>
 					<li>
