--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 				<a name="educations"></a>				
 				<h2>Educations</h2>
 				
-				<ul>		
+				<ul>	
+					<li><font color=#007799>10/2023 -- 02/2025:</font> PhD.Eng. student in Department of Mechanical Engineering, Politecnico di Milano, Milan </li>
 					<li><font color=#007799>09/2019 -- 07/2025:</font> PhD.Eng. student in Department of Industrial Engineering and Management, Shanghai Jiao Tong University, Shanghai </li>
 					<li><font color=#007799>09/2015 -- 07/2019:</font> B.Eng. student in School. of Information Management, Nanjing Agricultural University, Nanjing </li>
 					<li><font color=#007799>09/2012 -- 07/2015:</font> High school. student in the First high school of Handan city, Hebei</li>
@@ -151,6 +152,8 @@
 				<h2>Awarded Honors</h2>
 
 				<ul>
+					<li>2025: T-ASE 2024 Best Application Paper Award</li>
+					<li>2024: Shanghai Jiao Tong University Outstanding Graduate</li>
 					<li>2023: Shanghai Jiao Tong University Zhao Zhumulan Doctoral First-Class Scholarship</li>
 					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
 					<li>2023: Special prize in the 18th “Dongfeng Nissan Cup” Tsinghua IE Liangjian National Industrial Engineering Application Case Competition</li>
@@ -170,7 +173,7 @@
 				<ul>
 					<li><font color=#007799>Student Member</font> of IEEE and Operations Research Society of China. </font> </li>
 					<li><font color=#007799>Serve as</font> co-chair for 8th Stochastic Modelling Meeting. </font> </li>
-                                        <li><font color=#007799>Reviewer</font> of Computers & Operations Research, Computers & Industrial Engineering, International Journal of Computer Integrated Manufacturing. </font> </li> 
+                                        <li><font color=#007799>Reviewer</font> of IEEE Transactions on Automation Science and Engineering, Computers & Operations Research, Computers & Industrial Engineering, Flexible Services and Manufacturing Journal, International Journal of Computer Integrated Manufacturing. </font> </li> 
 					<li><font color=#007799>03/2021 – 03/2022: </font> Secretary of Doctoral League Branch of the Department of Industrial Engineering and Management, Shanghai Jiao Tong University. </font> </li>
 					<li><font color=#007799>09/2020 – 06/2022: </font> Member of the Ministerial Group of the Graduate Student Council of the School of Mechanical Engineering, Shanghai Jiao Tong University. </font> </li>
 				</ul>
