--- a/pubs.htm
+++ b/pubs.htm
@@ -98,7 +98,7 @@
 			<h2>Submitted articles</h2>
 				<ol>				
 				                <li>
-						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. <b>Dynamic advance scheduling for joint online and offline outpatients with stochastic chronic series revisits demands.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> (R0: Under submission)
+						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. <b>Dynamic capacity allocation for online and offline outpatient services with stochastic multiple revisits.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> (R0: Under review)
 						</li>	
 						<li>
 						Peng Guo, Xiaoxiao Shen, Zhiwei Wang, Zhihua Chen, Rui Miao. <b>Dynamic price incentive mechanism of user-based electric vehicle carsharing service allocation for supply-demand balance.</b> <i>Flexible Services and Manufacturing Journal.</i> (R0: Under review)
