--- a/pubs.htm
+++ b/pubs.htm
@@ -72,7 +72,7 @@
 						Xiaoxiao Shen, Na Li*, Xiaoqing Xie. <b>Multiserver time window allowance schedules for virtual visits with uncertain time-dependent no-shows and service times.</b> <i>Advanced Engineering Informatics.</i> 59, 102252, 2024.[<A href="Publication/06.pdf">pdf</A>][<A href="https://www.sciencedirect.com/science/article/pii/S1474034623003804">Link</A>] 					
 						</li>
 						<li>
-						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. <b>Advance scheduling for chronic care under online or offline revisit uncertainty.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> 2023. (ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)[<A href="Publication/05.pdf">pdf</A>]	[<A href="https://ieeexplore.ieee.org/abstract/document/10239270">Link</A>]					
+						Xiaoxiao Shen, Shichang Du*, Yan-Ning Sun, Poly Z.H. Sun, Rob Law, Edmond Q. Wu. <b>Advance scheduling for chronic care under online or offline revisit uncertainty.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> 2023. (IEEE T-ASE 2024 Best Application Paper Award, ESI Top 1% Highly Cited Paper and 0.1% Hot Paper)[<A href="Publication/05.pdf">pdf</A>]	[<A href="https://ieeexplore.ieee.org/abstract/document/10239270">Link</A>]					
 						</li>
 						<li>
 						 Xiaoxiao Shen, Jun Lv, Shichang Du*, Yafei Deng, Molin Liu, Yulu Zhou. <b>Integrated optimization of electric vehicles charging location and allocation for valet charging service.</b> <i>Flexible Services and Manufacturing Journal.</i> 1-27, 2023.[<A href="Publication/04.pdf">pdf</A>]	[<A href="https://link.springer.com/article/10.1007/s10696-023-09508-8">Link</A>]					
