--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 				
 				<p>
 				<img border="0" src="./images/Me3.jpg" width="110.1" height="154.4" class="float-left" />
-				I was born in Handan city, Hebei province, China in 1998. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
-				Now, I am pursuing my ph. D. degree in  School of Mechanical Engineering at Shanghai Jiao Tong University, Shanghai, China, and Department of Mechanical Engineering, Politecnico di Milano, Milan, Italy.
-				My domestic supervisor is Prof. <A href="https://me.sjtu.edu.cn/teacher_directory1/dushichang.html" target="_blank"><strong>Shichang Du</strong></A>. 
+				I was born in Handan city, Hebei province, China in 1998. I am currently a lecturer (Assistant Professor equivalent) with the Department of Industrial Engineering, School of Mechanical and Electronic Engineering, Wuhan University of Technology. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
+				In 2025, I received dual Ph.D. degrees from the Department of Industrial Engineering and Management at Shanghai Jiao Tong University, Shanghai, China, and the Department of Mechanical Engineering at Politecnico di Milano, Milan, Italy.  
 				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Andrea Matta</strong></A>.
 				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
 				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
@@ -75,6 +74,9 @@
 				<h2>News</h2>
 
 				<ul>
+					<li>
+					<font color=#007799>03/2024:</font> Our paper entitled: "Dynamic Capacity Allocation for Integrated Online and Offline Outpatient Services with Stochastic Multiple Revisits" has been accepted at <em>IEEE Transactions on Automation Science and Engineering</em>. More details can be found at <a><a href="pubs.htm">Publications</a>..
+					</li>
 					<li>
 					<font color=#007799>21/3/2025:</font> Our paper entitled "Advance Scheduling for Chronic Care under Online or Offline Revisit Uncertainty" has received the T-ASE 2024 Best Application Paper Award!!
 					</li>					
@@ -128,7 +130,7 @@
 				
 				<ul>	
 					<li><font color=#007799>10/2023 -- 02/2025:</font> PhD.Eng. student in Department of Mechanical Engineering, Politecnico di Milano, Milan </li>
-					<li><font color=#007799>09/2019 -- 07/2025:</font> PhD.Eng. student in Department of Industrial Engineering and Management, Shanghai Jiao Tong University, Shanghai </li>
+					<li><font color=#007799>09/2019 -- 12/2025:</font> PhD.Eng. student in Department of Industrial Engineering and Management, Shanghai Jiao Tong University, Shanghai </li>
 					<li><font color=#007799>09/2015 -- 07/2019:</font> B.Eng. student in School. of Information Management, Nanjing Agricultural University, Nanjing </li>
 					<li><font color=#007799>09/2012 -- 07/2015:</font> High school. student in the First high school of Handan city, Hebei</li>
 				</ul>	
@@ -143,7 +145,8 @@
 					<li>Stochastic optimization</li>
 					<li>Exact optimization algorithm</li>
 					<li>Evolutionary Optimization</li>
-                                        <li>Reinforcement Learning</li>
+					<li>Machine Learning</li>
+                    <li>Reinforcement Learning</li>
 					<li>Simulation optimization</li>
 				</ul>
 
@@ -171,7 +174,7 @@
 				<h2>Social Activities</h2>
 
 				<ul>
-					<li><font color=#007799>Student Member</font> of IEEE and Operations Research Society of China. </font> </li>
+					<li><font color=#007799>Member</font> of IEEE and Operations Research Society of China. </font> </li>
 					<li><font color=#007799>Serve as</font> co-chair for 8th Stochastic Modelling Meeting. </font> </li>
                                         <li><font color=#007799>Reviewer</font> of IEEE Transactions on Automation Science and Engineering, Computers & Operations Research, Computers & Industrial Engineering, Flexible Services and Manufacturing Journal, International Journal of Computer Integrated Manufacturing. </font> </li> 
 					<li><font color=#007799>03/2021 – 03/2022: </font> Secretary of Doctoral League Branch of the Department of Industrial Engineering and Management, Shanghai Jiao Tong University. </font> </li>
@@ -200,6 +203,12 @@
 				<h2>Project</h2>
 
 				<ul>
+					<li>
+						<font color=#007799>EU project </font> "AutoTwin", member, 101092021. 2023.10-2025.12.</font> 
+					</li>
+					<li>
+						<font color=#007799>National Natural Science Foundation of China</font> "Research on Resource Efficiency Optimization for the Complex Coupling of Internet-Based Healthcare and Traditional Medical Services", member, 72171144. 2022.1-2025.12.</font> 
+					</li>
 					<li>
 						<font color=#007799>National Key Research and Development Project</font> "Research and application of intelligent wiring and reliability technical standards for domestic high-end CNC machine tools", member, 2022YFF0605700. 2023.1-2025.12.</font> 
 					</li>
@@ -247,3 +256,4 @@
 
 </body>
 </html>
+
