--- a/pubs.htm
+++ b/pubs.htm
@@ -59,6 +59,9 @@
 				<!--h3>---2023---</h3--> 
 					<ol>   <!-- 2023-->
 						<li>
+						Xiaoxiao Shen, Jun Lv, Shichang Du*, Andrea Matta*. <b>Dynamic Capacity Allocation for Integrated Online and Offline Outpatient Services with Stochastic Multiple Revisits.</b> <i>IEEE Transactions on Automation Science and Engineering.</i> Accept, 2026. [<A href="https://ieeexplore.ieee.org/document/11389807">Link</A>]
+						</li>
+						<li>
 						Xiaoxiao Shen, Nicla Frigerio, Shichang Du*, Andrea Matta*. <b>Production planning and allocation of re-entrance flows with stochastic quality.</b> <i>Proceedings of 2024 IEEE 20th International Conference on Automation Science and Engineering.</i> Accept, 2024. [<A href="Publication/09.pdf">pdf</A>]
 						</li>
 						
