--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<h2>Awarded Honors</h2>
 
 				<ul>
-					<li>2025: T-ASE 2024 Best Application Paper Award</li>
+					<li>2025: IEEE T-ASE 2025 Best Application Paper Award</li>
 					<li>2024: Shanghai Jiao Tong University Outstanding Graduate</li>
 					<li>2023: Shanghai Jiao Tong University Zhao Zhumulan Doctoral First-Class Scholarship</li>
 					<li>2023: China Scholarship Council’s International Cooperation Training Project for Innovative Talents</li>
@@ -193,36 +193,26 @@
 				<ul>
 					<li></font> National Industrial Engineering Doctoral Forum, 2020, online, China, “Best Style Award” </font> </li>
 					<li></font> China Industrial Engineering Annual Conference, 2023, Nanchang, China</font> </li>
-                                        <li></font> 8th Stochastic Modelling Meeting, 2024, Milan, Italy </font> </li> 
+                    <li></font> 8th Stochastic Modelling Meeting, 2024, Milan, Italy </font> </li> 
 					<li></font> IEEE 20th International Conference on Automation Science and Engineering, 2024, Bari, Italy </font> </li>
 					<li></font> The 4th digital twin international conference, 2024, Milan, Italy </font> </li>
 				</ul>		
-
-				<a name="work"></a>				
-				<h2>Work Experiences</h2>
-				
-				<ul>
-					None.
-				</ul>
 	
 				<a name="projects"></a>				
 				<h2>Project</h2>
 
 				<ul>
 					<li>
-						<font color=#007799>EU project </font> "AutoTwin", member, 101092021. 2023.10-2025.12.</font> 
+						<font color=#007799>EU project: </font> "AutoTwin", member, 101092021. 2023.10-2025.12.</font> 
 					</li>
 					<li>
-						<font color=#007799>National Natural Science Foundation of China</font> "Research on Resource Efficiency Optimization for the Complex Coupling of Internet-Based Healthcare and Traditional Medical Services", member, 72171144. 2022.1-2025.12.</font> 
+						<font color=#007799>National Natural Science Foundation of China:</font> "Research on Resource Efficiency Optimization for the Complex Coupling of Internet-Based Healthcare and Traditional Medical Services", member, 72171144. 2022.1-2025.12.</font> 
 					</li>
 					<li>
-						<font color=#007799>National Key Research and Development Project</font> "Research and application of intelligent wiring and reliability technical standards for domestic high-end CNC machine tools", member, 2022YFF0605700. 2023.1-2025.12.</font> 
+						<font color=#007799>National Key Research and Development Project:</font> "Research and application of intelligent wiring and reliability technical standards for domestic high-end CNC machine tools", member, 2022YFF0605700. 2023.1-2025.12.</font> 
 					</li>
 					<li>
 						<font color=#007799>Weichai Power:</font> "New Product Center Intelligent Scheduling Project", member, 2020-2023.</font> 
-					</li>
-					<li>
-						<font color=#007799>General Program of National Natural Science Foundation of China:</font> "Research on resource utility optimization for the complex coupling of Internet and traditional medical care", member, 2022-2025.</font> 
 					</li>
 					<li>
 						<font color=#007799>High-tech ship scientific research project of the Ministry of Industry and Information Technology:</font> "Research on intelligent logistics technology for ship steel plates and outfitting parts", member, 2021-2022.</font> 
@@ -262,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
