--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<p>
 				<img border="0" src="./images/Me3.jpg" width="110.1" height="154.4" class="float-left" />
 				I was born in Handan city, Hebei province, China in 1998. I am currently a lecturer (Assistant Professor equivalent) with the Department of Industrial Engineering, School of Mechanical and Electronic Engineering, Wuhan University of Technology, Wuhan, China. I received B.Eng.degrees in industrial engineering from College of Information Management, Nanjing Agricultural University, Nanjing, China, in 2019. 
-				In 2025, I received dual Ph.D. degrees from the Department of Industrial Engineering and Management at Shanghai Jiao Tong University, Shanghai, China, and the Department of Mechanical Engineering at Politecnico di Milano, Milan, Italy.  
+				In 2025, I received dual Ph.D. degrees in industrial engineering from the Department of Industrial Engineering and Management at Shanghai Jiao Tong University, Shanghai, China, and the Department of Mechanical Engineering at Politecnico di Milano, Milan, Italy.  
 				My foreign supervisor is Prof. <A href="https://www.mecc.polimi.it/en/research/faculty/prof-andrea-matta" target="_blank"><strong>Andrea Matta</strong></A>.
 				<br>My  current research interests include analysis, modelling, and decision-making optimization for the operations management problems in manufacturing systems and service systems. My technical specialties include mathematical modeling, stochastic optimization, exact optimization algorithm, intelligent optimization algorithm, statistical modeling analysis, simulation optimization. 
 				<br>My researchgate is <a href="https://www.researchgate.net/profile/Xiaoxiao-Shen-2", target="_blank"><strong>here</strong></a>. 
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
